--- a/CSS/modals.css
+++ b/CSS/modals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Montserrat:wght@400;700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -20,76 +21,74 @@
 
 .modal-content {
   background: #f2eeff;
-  margin: 15% auto;
-  padding: 20px;
+  margin: 13% auto;
+  padding: 1.67rem;
   border: 1px solid #f2eeff;
-  width: 743px;
-  height: 600px;
+  width: 50%;
+  height: 35rem;
 }
 
 .modal-content h2 {
   display: flex;
   justify-content: center;
   margin-top: 0;
+  margin-bottom: 4rem;
   color: rgba(31, 30, 30, 0.85);
 }
 
 .modal-content label {
   display: block;
-  margin-left: 176px;
+  margin-left: 23.64%;
   margin-bottom: 5px;
   color: rgba(93, 61, 219, 1);
 }
 
 .modal-content input[type="text"],
 .modal-content textarea {
-  width: 370px;
-  padding: 12px 20px;
-  margin: 8px 165px;
+  width: 50%;
+  padding: 1.33rem 2.67rem;
+  margin: 2.13rem 22.24%;
   box-sizing: border-box;
   border: 1px solid #5d3ddb;
-  border-radius: 15px;
+  border-radius: 1.5rem;
   background: #f2eeff;
 }
 
 .modal-content button[type="button"] {
   color: white;
-  width: 163px;
-  height: 46.76px;
+  width: 18.06%;
+  height: 2.85rem;
   border: none;
   cursor: pointer;
-  margin-left: 10px;
+  margin-left: 1.33rem;
   background: #5d3ddb;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 7px;
+  box-shadow: 0px 0.27rem 0.27rem rgba(0, 0, 0, 0.25);
+  border-radius: 1.17rem;
 }
 
 .modal-content button[type="button"]:hover {
   background-color: #492baf;
 }
 
+.modal-content button[type="button"]:last-child {
+  background-color: #aaa;
+  float: right;
+}
+
+.modal-content button[type="button"]:last-child:hover {
+  background-color: #888;
+}
+
 .back {
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   text-align: center;
 }
 
-.buttons {
-  margin-left: 270px;
-}
-
 .title {
-  margin: 46px 0px 53px 0px;
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Montserrat:wght@400;700&display=swap");
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+  margin: 3.67rem 0 3.96rem 0;
 }
 
 .row {
@@ -98,11 +97,11 @@
 }
 
 .player-estimate {
-  margin: 80px;
+  margin: 8rem;
   font-style: normal;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 17px;
+  font-size: 0.87rem;
+  line-height: 1.06rem;
   text-align: center;
   color: #5d3ddb;
 }
@@ -110,46 +109,7 @@
 .container .card-estimate {
   box-sizing: border-box;
   position: relative;
-  width: 79px;
-  height: 110.27px;
+  width: 10.99%;
+  height: 14.02rem;
   border: 1px solid #5d3ddb;
-  border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  font-size: 36px;
-  font-weight: bold;
-  margin: 0;
-  background-image: linear-gradient(to top, #5d3ddb41, rgba(93 61 219));
-  margin: 0 0 13px 0px;
-}
-
-.container .row .player-estimate {
-  margin: 197px 58px 121px 58px;
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Montserrat:wght@400;700&display=swap");
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
-}
-
-.cancel {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-}
-
-.confirm {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
 }
