--- a/CSS/style-index.css
+++ b/CSS/style-index.css
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Montserrat:wght@400;700&display=swap");
+
+/* Propriedades Gerais */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
+
+/* Parte 1 */
 
 body {
   background-color: rgba(242, 238, 255, 0.5);
